--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -16,10 +16,9 @@
 @import "blocks/page-footer.scss";
 @import "blocks/competition.scss";
 @import "blocks/form.scss";
-@import "blocks/important.scss";
 @import "blocks/galery.scss";
+@import "blocks/panorama.scss";
 @import "blocks/newphoto.scss";
 
 //Global
 @import "global/normalize";
-
