--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -1,13 +1,20 @@
+.contacts {
+  text-align: center;
+}
+
 .contacts__text {
-  color: #283645;
-  font-weight: 300;
+  margin-bottom: 33px;
   font-size: 24px;
   line-height: 29px;
-  margin: 0;
-  padding: 0;
-  padding-right: 49px;
-  padding-left: 49px;
-  text-align: center;
+  font-weight: 300;
+  color: $blue;
+}
+
+.contacts__wraper {
+  display: flex;
+  flex-direction: column;
+  width: 320px;
+  margin: 0 auto;
 }
 
 @media (min-width: $tablet-width) {
@@ -17,7 +24,6 @@
 }
 
 .contacts__title {
-  color: #080808;
   font-weight: 700;
   font-size: 18px;
   text-decoration: none;
@@ -28,6 +34,7 @@
   flex-direction: row;
   justify-content: center;
   text-align: center;
+  color: $blue;
 }
 
 .contacts__subtitle {
@@ -42,6 +49,7 @@
   flex-direction: row;
   justify-content: center;
   text-align: center;
+  margin-bottom: 24px;
 }
 
 .contacts__svg {
@@ -53,6 +61,7 @@
 .contacts__map {
   width: 100%;
   height: 200px;
+  clip-path: polygon(52% 26%, 100% 0, 100% 100%, 0 100%, 0 0);
 }
 
 @media (min-width: $tablet-width) {
@@ -63,9 +72,8 @@
 }
 
 @media (min-width: $desktop-width) {
-  .contacts__map{
+  .contacts__map {
     width: 100%;
     height: 502px;
   }
 }
-
