--- a/source/sass/blocks/desc.scss
+++ b/source/sass/blocks/desc.scss
@@ -20,7 +20,7 @@
 }
 
 @media (min-width: $desktop-width) {
-  .desc{
+  .desc {
     display: flex;
     flex-direction: column-reverse;
   }
@@ -36,14 +36,12 @@
   padding-left: 20px;
 }
 
-@media (max-width: $desktop-width){
+@media (max-width: $desktop-width) {
   .desc__img1,
-  .desc__img2{
+  .desc__img2 {
     display: none;
   }
-
 }
-
 
 @media (min-width: $tablet-width) {
   .desc__img3 {
@@ -55,25 +53,45 @@
 }
 
 @media (min-width: $desktop-width) {
-  .desc__img3{
+  .desc__img3 {
     width: 165px;
     height: 294px;
   }
 }
 
+.desc__feature {
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  width: 320px;
+  margin: 0 auto;
+  padding-bottom: 320px;
+  background-image: url(..//img/iphone3.png);
+  background-repeat: no-repeat;
+  background-position: center 355px;
+  background-size: 157px auto;
+}
+
 @media (min-width: $desktop-width) {
-  .desc__feature{
+  .desc__feature {
     display: flex;
     flex-direction: row;
     background-color: $gray;
   }
 }
 
+.desc__feature-wrap {
+  margin-top: 0;
+  box-sizing: border-box;
+  margin-top: 33px;
+  text-align: center;
+}
 
 .desc__title {
   color: #000000;
   font-weight: 700;
   line-height: 24px;
+  font-size: 18px;
   margin: 0;
   padding: 0;
   text-align: center;
@@ -88,7 +106,7 @@
 }
 
 @media (min-width: $desktop-width) {
-  .desc__title{
+  .desc__title {
     font-weight: 700;
     font-size: 30px;
     line-height: 30px;
@@ -98,10 +116,12 @@
 .desc__subtitle {
   color: #283645;
   font-weight: 400;
+  font-size: 14px;
   line-height: 24px;
-  margin: 0;
   padding: 0;
   text-align: center;
+  width: 282px;
+  margin: 10px auto 0;
 }
 
 @media (min-width: $tablet-width) {
