--- a/source/sass/blocks/main-nav.scss
+++ b/source/sass/blocks/main-nav.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    margin-left: auto;
+    margin-left: 173px;
   }
 }
 
@@ -22,6 +22,13 @@
   }
 }
 
+// @media (min-width: $tablet-width) {
+//   .site-list__item {
+//     border-top: 1px solid #485461;
+//     border-bottom: 1px solid #000;
+//   }
+// }
+
 .site-list__item {
   a {
     text-decoration: none;
@@ -29,7 +36,6 @@
     font-weight: 700;
     font-size: 18px;
     line-height: 32px;
-    box-shadow: 0px 1px 0px #000000;
     inset:0px 1px 0px rgba(255, 255, 255, 0.15);
     display: flex;
     flex-direction: column;
