--- a/source/sass/blocks/table-slider.scss
+++ b/source/sass/blocks/table-slider.scss
@@ -1,3 +1,4 @@
 .table-slider {
-  background-color: #f2f2f2;
+  background-image: url("..//img/greybackgrounddesctop.png");
+  background-size: cover;
 }
