--- a/source/sass/blocks/text.scss
+++ b/source/sass/blocks/text.scss
@@ -1,16 +1,15 @@
+.text {
+  padding-bottom: 0;
+  margin-top: 310px;
+}
+
 .text__desc {
-  color: #283645;
-  font-weight: 300;
+  color: $blue;
+  width: 320px;
+  margin: 0 auto 26px;
   font-size: 24px;
-  line-height: 29px;
-  margin: 0;
-  padding: 0;
-  padding-left: 20px;
-  padding-right: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-top: 46px;
+  line-height: 30px;
+  font-weight: 300;
   text-align: center;
 }
 
