--- a/source/sass/blocks/desc.scss
+++ b/source/sass/blocks/desc.scss
@@ -12,10 +12,7 @@
 
 @media (min-width: $tablet-width) {
   .desc {
-    display: flex;
-    flex-direction: row-reverse;
-    background-size: auto;
-    background-repeat: no-repeat;
+    margin-top: 47px;
   }
 }
 
@@ -23,6 +20,7 @@
   .desc {
     display: flex;
     flex-direction: column-reverse;
+    background-size: 100%;
   }
 }
 
@@ -66,25 +64,92 @@
   width: 320px;
   margin: 0 auto;
   padding-bottom: 320px;
-  background-image: url(..//img/iphone3.png);
+  background-image: url("..//img/iphone3.png");
   background-repeat: no-repeat;
   background-position: center 355px;
   background-size: 157px auto;
 }
 
-@media (min-width: $desktop-width) {
+@media (min-width: $tablet-width) {
   .desc__feature {
-    display: flex;
-    flex-direction: row;
-    background-color: $gray;
+    background: url("..//img/bigiphonetablet.png");
+    background-repeat: no-repeat;
+    background-position: left 25px;
+    background-size: 268px auto;
+    align-items: flex-end;
+    padding-top: 95px;
+    padding-bottom: 43px;
+    width: 620px;
+    margin: 0 auto;
   }
 }
 
-.desc__feature-wrap {
-  margin-top: 0;
+@media (min-width: $desktop-width) {
+  .desc__feature {
+    flex-direction: row;
+    justify-content: space-between;
+    -ms-grid-row-align: stretch;
+    align-items: stretch;
+    padding-left: 0;
+    padding-top: 0;
+    background: 0 0;
+    width: 940px;
+    margin: 0 auto;
+  }
+}
+
+.desc__feature-item {
   box-sizing: border-box;
-  margin-top: 33px;
   text-align: center;
+}
+
+@media (min-width: $desktop-width) {
+  .desc__feature-item {
+    width: 300px;
+    margin: 0;
+    padding-top: 360px;
+    padding-left: 30px;
+    padding-right: 27px;
+    text-align: center;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .desc__feature-item:first-child {
+   background-image: url("..//img/phonedesctop1.png");
+   background-repeat: no-repeat;
+   background-position: top;
+   background-size: 292px 302px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .desc__feature-item:nth-child(2) {
+   background-image: url("..//img/phonedesctop2.png");
+   background-repeat: no-repeat;
+   background-position: top;
+   background-size: 292px 302px;
+  }
+}
+
+@media (min-width: $desktop-width) {
+  .desc__feature-item:last-child {
+   background-image: url("..//img/phonedesctop3.png");
+   background-repeat: no-repeat;
+   background-position: top;
+   background-size: 292px 302px;
+  }
+}
+
+@media (min-width: $desktop-width){
+  .desc__feature-wraper:first-child,
+  .desc__feature-wraper:nth-child(2),
+  .desc__feature-wraper:last-child {
+    background-color: $gray;
+    position: relative;
+    padding-top: 59px;
+    top: -120px;
+  }
 }
 
 .desc__title {
@@ -99,7 +164,6 @@
 
 @media (min-width: $tablet-width) {
   .desc__title {
-    padding-top: 20px;
     padding-left: 42px;
     text-align: left;
   }
@@ -110,6 +174,8 @@
     font-weight: 700;
     font-size: 30px;
     line-height: 30px;
+    padding-left: 0;
+    text-align: center;
   }
 }
 
@@ -138,5 +204,9 @@
     font-size: 18px;
     line-height: 30px;
     color: $blue;
+    width: 240px;
+    margin-top: 22px;
+    padding: 0;
+    text-align: center;
   }
 }
