--- a/source/sass/blocks/text.scss
+++ b/source/sass/blocks/text.scss
@@ -3,6 +3,13 @@
   margin-top: 310px;
 }
 
+@media (min-width: $tablet-width) {
+  .text {
+    margin-top: 58px;
+    margin-bottom: 28px;
+  }
+}
+
 .text__desc {
   color: $blue;
   width: 320px;
@@ -18,6 +25,9 @@
     font-weight: 300;
     font-size: 40px;
     line-height: 54px;
+    margin-bottom: 0;
+    width: 620px;
+    margin: 0 auto;
   }
 }
 
@@ -26,5 +36,7 @@
     font-weight: 300;
     font-size: 50px;
     line-height: 68px;
+    width: 940px;
+    margin: 0 auto;
   }
 }
