--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,13 +5,12 @@
 // blocks
 @import "blocks/page.scss";
 @import "blocks/page-header.scss";
-@import "blocks/main-nav.scss";
 @import "blocks/page-main.scss";
 @import "blocks/text.scss";
 @import "blocks/desc.scss";
-@import "blocks/study.scss";
-@import "blocks/slider-review.scss";
-@import "blocks/table-slider.scss";
+@import "blocks/effect.scss";
+@import "blocks/carousel.scss";
+@import "blocks/tariffs.scss";
 @import "blocks/contacts.scss";
 @import "blocks/page-footer.scss";
 @import "blocks/competition.scss";
