--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -111,7 +111,7 @@
   width: 51px;
   height: 51px;
   margin-right: 12px;
-  border: 3px solid rgba(40,54,69,.1);
+  border: 3px solid rgba(40, 54, 69, 0.1);
   border-radius: 50%;
 }
 
@@ -125,7 +125,7 @@
   width: 51px;
   height: 51px;
   margin-right: 12px;
-  border: 3px solid rgba(40,54,69,.1);
+  border: 3px solid rgba(40, 54, 69, 0.1);
   border-radius: 50%;
 }
 
@@ -139,7 +139,6 @@
   width: 51px;
   height: 51px;
   margin-right: 12px;
-  border: 3px solid rgba(40,54,69,.1);
+  border: 3px solid rgba(40, 54, 69, 0.1);
   border-radius: 50%;
 }
-
