--- a/source/sass/blocks/form.scss
+++ b/source/sass/blocks/form.scss
@@ -210,7 +210,7 @@
   margin-bottom: 52px;
   font-size: 18px;
   line-height: 30px;
-  color: #283645
+  color: #283645;
 }
 
 @media (min-width: $desktop-width) {
@@ -323,7 +323,6 @@
 .form__contacts-input {
   border: 2px solid #e5e5e5;
   border-radius: 2px;
-  height: 59px;
   font-weight: 400;
   font-size: 18px;
   line-height: 30px;
@@ -442,7 +441,7 @@
     white-space: nowrap;
     padding-left: 24px;
     padding-right: 24px;
-    background-color: #fff;
+    background-color: $white;
   }
 }
 
@@ -503,7 +502,6 @@
     padding-bottom: 51px;
     border: 2px solid #e5e5e5;
     width: 620px;
-    margin: 0 auto;
   }
 }
 
@@ -513,7 +511,6 @@
     margin-bottom: 66px;
     padding-bottom: 42px;
     width: 940px;
-    margin: 0 auto;
   }
 }
 
@@ -613,9 +610,6 @@
   line-height: 30px;
   border-radius: 2px;
   text-align: center;
-  margin-left: 20px;
-  margin-right: 20px;
-  margin-top: 52px;
   display: block;
   box-sizing: border-box;
   margin: 0 auto;
